# rust-wc

./: .ignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs
completions/: README.md  _rwc  _rwc.ps1  rwc.bash  rwc.elv  rwc.fish
src/: calc.rs  cli.rs  file.rs  files.rs  lib.rs  main.rs  output.rs  wc_result.rs
