[package]
name = "rust-wc"
description = "A GNU/wc clone written in rust, which is super faster when reading a large of big files"
version = "0.3.0"
authors = ["jedsek <jedsek@qq.com>"]
edition = "2021"
readme = "README.md"

documentation = "https://github.com/jedsek/rust-wc"
homepage = "https://github.com/jedsek/rust-wc"
repository = "https://github.com/jedsek/rust-wc"

keywords = ["wc", "command-line", "rust-wc", "rwc"]
categories = ["command-line-utilities"]
license = "MIT"

[[bin]]
name = "rwc"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

# Reduce the size of binary file
[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
incremental = false
strip = true

[dependencies]
clap = {version = "4.0.8", features = ["derive"]}
indicatif = "0.17.1"
prettytable-rs = {version = "0.9.0", default-features = false}
rayon = "1.5.3"
tap = "1.0.1"

[build-dependencies]
clap = {version = "4.0.8", features = ["derive"]}
clap_complete = "4.0.2"
