[package]
name = "rwc"
description = "A GNU/wc clone written in rust, which is faster when reading a large of big files"
version = "0.3.0"
authors = ["jedsek <jedsek@qq.com>"]
edition = "2021"
readme = "README.md"

documentation = "https://github.com/jedsek/rust-wc"
homepage = "https://github.com/jedsek/rust-wc"
repository = "https://github.com/jedsek/rust-wc"

keywords = ["wc", "command-line", "rust-wc", "rwc"]
categories = ["command-line-utilities", "unix", "tools", "wc"]
license = "MIT"

# Reduce the size of binary file
[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
incremental = false
strip = true

[dependencies]
clap = {version = "4.0.8", features = ["derive"]}
indicatif = "0.17.1"
prettytable-rs = "0.9.0"
rayon = "1.5.3"
tap = "1.0.1"

[build-dependencies]
clap = {version = "4.0.8", features = ["derive"]}
clap_complete = "4.0.2"
