[package]
name = "rust-wc"
description = "A GNU/wc clone written in rust, which is faster when reading a large of big files"
version = "0.3.5"
authors = ["jedsek <jedsek@qq.com>"]
edition = "2021"
readme = "README.md"

documentation = "https://github.com/jedsek/rust-wc"
homepage = "https://github.com/jedsek/rust-wc"
repository = "https://github.com/jedsek/rust-wc"

keywords = ["wc", "command-line", "rust-wc", "rwc"]
categories = ["command-line-utilities"]
license = "MIT"

[[bin]]
name = "rwc"
path = "src/main.rs"

# Reduce the size of binary file
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
incremental = false
strip = true

[dependencies]
clap = {version = "4.0.29", features = ["derive"]}
unicode-width = "0.1.10"
indicatif = "0.17.2"
prettytable-rs = "0.9.0"
rayon = "1.6.1"
stripmargin = "0.1.1"

[build-dependencies]
clap = {version = "4.0.29", features = ["derive"]}
clap_complete = "4.0.6"
stripmargin = "0.1.1"
